[package]
name = "sqjson"
version = "0.1.4"
edition = "2024"
authors = ["Hafiz Ali Raza haffizaliraza@gmail.com"]
description = "A simple JSON-based embedded database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haffizaliraza/sqjson"
readme = "README.md"
keywords = ["json", "embedded-db", "database", "sqlite", "mmap"]
categories = ["database-implementations", "data-structures", "filesystem"]
documentation = "https://docs.rs/sqjson"
homepage = "https://github.com/haffizaliraza/sqjson"

[lib]
name = "sqjson"
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9"
thiserror = "1.0"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"